<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="16dp"
    app:columnCount="3"
    app:rowCount="8"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="48dp">


    <TextView
        android:id="@+id/label1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/edit_date"
        android:textAppearance="?android:textAppearanceLarge"
        app:layout_columnWeight="2"
        app:layout_gravity="left|fill_vertical"
        app:layout_rowWeight="1" />

    <EditText
        android:id="@+id/dateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/sample_date"
        android:ems="10"
        android:hint="@string/sample_date"
        android:inputType="date"
        android:digits="0123456789/"
        android:maxLength="10" />

    <TextView
        android:id="@+id/blank1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_columnWeight="1"
        app:layout_gravity="fill_vertical"
        app:layout_rowWeight="1" />

    <TextView
        android:id="@+id/label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/edit_stationType"
        android:textAppearance="?android:textAppearanceLarge"
        app:layout_columnWeight="2"
        app:layout_gravity="left|fill_vertical"
        app:layout_rowWeight="1" />

    <EditText
        android:id="@+id/stationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/sample_station_type"
        android:ems="10"
        android:hint="@string/sample_station_type"
        android:inputType="text" />

    <Button
        android:id="@+id/stationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_vertical"
        app:layout_rowWeight="1" />

    <TextView
        android:id="@+id/label3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/edit_startStation"
        android:textAppearance="?android:textAppearanceLarge"
        app:layout_columnWeight="2"
        app:layout_gravity="left|fill_vertical"
        app:layout_rowWeight="1" />

    <EditText
        android:id="@+id/startStationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/sample_station"
        android:ems="10"
        android:hint="@string/sample_station"
        android:inputType="text" />

    <Button
        android:id="@+id/startStationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_vertical"
        app:layout_rowWeight="1" />

    <TextView
        android:id="@+id/label4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/edit_endStation"
        android:textAppearance="?android:textAppearanceLarge"
        app:layout_columnWeight="2"
        app:layout_gravity="left|fill_vertical"
        app:layout_rowWeight="1" />

    <EditText
        android:id="@+id/endStationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/sample_station"
        android:ems="10"
        android:hint="@string/sample_station"
        android:inputType="text" />

    <Button
        android:id="@+id/endStationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_vertical"
        app:layout_rowWeight="1" />

    <TextView
        android:id="@+id/label5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/edit_cost"
        android:textAppearance="?android:textAppearanceLarge"
        app:layout_columnWeight="2"
        app:layout_gravity="left|fill_vertical"
        app:layout_rowWeight="1" />

    <EditText
        android:id="@+id/costText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/sample_cost"
        android:ems="10"
        android:hint="@string/sample_cost"
        android:digits="0123456789"
        android:inputType="number" />

    <TextView
        android:id="@+id/blank2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_columnWeight="1"
        app:layout_gravity="fill_vertical"
        app:layout_rowWeight="1" />

    <TextView
        android:id="@+id/label6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/edit_type"
        android:textAppearance="?android:textAppearanceLarge"
        app:layout_columnWeight="2"
        app:layout_gravity="left|fill_vertical"
        app:layout_rowWeight="1" />

    <Spinner
        android:id="@+id/selectType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:spinnerMode="dialog"
        app:layout_rowWeight="1" />
        app:layout_rowWeight="1" />

    <TextView
        android:id="@+id/blank3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_columnWeight="1"
        app:layout_gravity="fill_vertical"
        app:layout_rowWeight="1" />

    <TextView
        android:id="@+id/label7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/edit_reason"
        android:textAppearance="?android:textAppearanceLarge"
        app:layout_columnWeight="2"
        app:layout_gravity="left|fill_vertical"
        app:layout_rowWeight="1" />

    <EditText
        android:id="@+id/reasonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/sample_reason"
        android:ems="10"
        android:hint="@string/sample_reason"
        android:inputType="text" />

    <Button
        android:id="@+id/reasonButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_columnWeight="1"
        app:layout_gravity="center_vertical"
        app:layout_rowWeight="1" />

    <TextView
        android:id="@+id/idText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

</android.support.v7.widget.GridLayout>
